--- a/frontend/jobtrackr-fe/src/styles.scss
+++ b/frontend/jobtrackr-fe/src/styles.scss
@@ -57,6 +57,7 @@ body {
   --spacing-xxs: 2px;
   --spacing-xs: 4px;
   --spacing-sm: 8px;
+  --spacing-sm-md: 12px;
   --spacing-md: 16px;
   --spacing-lg: 24px;
   --spacing-xl: 32px;
